Added Bar Graph and Changed Logo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
     <script src="index.js"></script>
   </head>
   <body>
-    <!--<img src="./resources/nsf_logo.svg" alt="NSF logo" />-->
+    <img
+      src="./resources/CREST-Logo.bmp"
+      alt="NSF CREST Tamuk Logo"
+      width="200"
+      height="200"
+    />
     <h1>Texas A&M University - Kingsville Water Level Research</h1>
     <p id="sponsor-1">Sponsored by NSF - CREST</p>
     <!--<img src="./resources/layout_set_logo.png" alt="Tamuk logo" />-->
@@ -71,7 +76,7 @@
           name="info_box"
           id="text_area_1"
           cols="30"
-          rows="10"
+          rows="53"
         ></textarea>
       </span>
       <p id="caption-1">
@@ -80,6 +85,13 @@
         click on it.
       </p>
     </div>
-    <div id="myDiv"><!-- Plotly chart will be drawn inside this DIV --></div>
+    <div id="myDiv">
+      <!-- Plotly chart will be drawn inside this DIV -->
+    </div>
+    <p id="caption-2">
+      Hover over a trace to see its value. In order to turn on and off a
+      specific trace, click on its name in the legend. To turn off all other
+      traces but a specific one, double click it.
+    </p>
   </body>
 </html>
