Set up project on new device

--- a/public/index.html
+++ b/public/index.html
@@ -35,23 +35,26 @@
     <p id="sponsor-1">Sponsored by NSF - CREST</p>
     <!--<img src="./resources/layout_set_logo.png" alt="Tamuk logo" />-->
     <hr />
-    <p id="p-1">
-      This research focuses on the water level in The Winter Garden Agricultural
-      Region. Three sensors have been placed around this region which allows for
-      the study of the water level with respect to the numerous factors which
-      can influence it.
-    </p>
+    <div id="text_area-1">
+      <p id="p-1">
+        This research focuses on the water level in The Winter Garden Agricultural
+        Region. Three sensors have been placed around this region which allows for
+        the study of the water level with respect to the numerous factors which
+        can influence it.
+      </p>
+    </div>
+    
     <div id="map-1">
       <span>
         <img
           id="graph"
           src="./resources/south_texas_map_sensors.png"
-          alt="A map of the Winter Garden in Texas"
-          usemap="#Winter_Garden_sensor_map"
           width="1100"
           height="800"
+          alt="A map of the Winter Garden in Texas"
+          usemap="#Winter_Garden_sensor_map"
+          
         />
-
         <map name="#Winter_Garden_sensor_map">
           <area
             shape="circle"
@@ -91,7 +94,7 @@
     <p id="caption-2">
       Hover over a trace to see its value. In order to turn on and off a
       specific trace, click on its name in the legend. To turn off all other
-      traces but a specific one, double click it.
+      traces but a specific one, double click on it in the legend.
     </p>
   </body>
 </html>
