Updated h1 in main.py

--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       width="200"
       height="200"
     />
-    <h1>Texas A&M University - Kingsville Water Level Research</h1>
+    <h1>NSF CREST Center For Sustainable Water Use Project</h1>
     <p id="sponsor-1">Sponsored by NSF - CREST</p>
     <!--<img src="./resources/layout_set_logo.png" alt="Tamuk logo" />-->
     <hr />
